--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,12 @@ edition = "2021"
 [dependencies]
 thirtyfour = "0.32.0-rc.9"
 tokio = { version = "1", features = ["full"] }
-reqwest = { version = "0.10.8", features = ["blocking"] }
-scraper = "0.12.0"
+reqwest = { version = "0.10.8" }
+
+# GUI
+eframe = "0.24.1"
+egui_extras = { version = "0.24.1", features = ["default", "image"] }
+env_logger = { version = "0.10", default-features = false, features = [
+    "auto-color",
+    "humantime",
+] }
