--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,21 +6,33 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-thirtyfour = "0.32.0-rc.9"
+#thirtyfour = "0.32.0-rc.9"
 
 # GUI
 eframe = "0.24.1"
 egui_extras = { version = "0.24.1", features = ["default", "image"] }
-env_logger = { version = "0.10", default-features = false, features = [
-    "auto-color",
-    "humantime",
-] }
 
 # Data
-reqwest = { version = "0.10.8", features = ["default", "json", "blocking"] }
+reqwest = { version = "0.10.8", features = ["json", "blocking"] }
 serde = "1.0.205"
 serde_json = "1.0.122"
 
 derive_more = { version = "1.0.0", features = ["from"] }
 dotenv = "0.15.0"
 chrono = "0.4.38"
+
+# native:
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+env_logger = { version = "0.10", default-features = false, features = [
+    "auto-color",
+    "humantime",
+] }
+
+# web:
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen-futures = "0.4"
+
+# to access the DOM (to hide the loading text)
+[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
+version = "0.3.4"
+
